--- a/src/components/Movies.css
+++ b/src/components/Movies.css
@@ -9,21 +9,27 @@
     justify-content: space-between;
     align-items: center;
     padding: 1px;
-    background-color: #211D54;
-
+    background-color: #211D54; /*banner*/
+    border-bottom: 5px solid rgba(4, 2, 35, 0.8);
 }
 
-.nav-logo span {
-    font-family: "Poppins", sans-serif;
-    font-size: 1.5rem;
+.logo {
+    font-family: 'Lato', sans-serif; 
+    font-size: 36px; 
     font-weight: 600;
-    color: #ffffff;
     letter-spacing: 4px;
+    background: linear-gradient(to right, #FAB33F, #F9EB32); 
+    color: transparent; 
+    -webkit-background-clip: text; 
+    background-clip: text; 
+    margin-left: 2rem;
+    align-items: center;
 }
 
 .nav-links {
+
     display: flex;
-    gap: 2rem;
+    gap: 6rem;
     list-style: none;
     align-items: center;
     font-size: 0.7rem; 
@@ -32,26 +38,49 @@
 
 .nav-links a {
     color: #ffffff;
+    margin-left: 1rem;
     text-decoration: none;
     font-size: 0.9rem;
     padding: 0.5rem 1rem;
     border-radius: 4px;
     transition: all 0.3s ease;
+    font-family: 'Lato', sans-serif; 
+    font-size: 16px; 
+    font-weight: 500;
+    text-transform: none;
 }
 
 .nav-links a.active {
-    background-color: #635CC3;
-    opacity: 0.5;
-    box-shadow: 5px 10px 30px rgba(87, 75, 144, 0.5);
+    background-color: rgba(99, 92, 195, 0.5); 
+    color: #ffffff; 
+    box-shadow: 0px 0px 15px rgba(99, 92, 195, 0.8); 
+ 
+}
+
+.nav-links a:hover {
+    background-color: rgba(99, 92, 195, 0.5); 
+    color: #ffffff; 
+    box-shadow: 0px 0px 15px rgba(99, 92, 195, 0.8);
 }
 
 .logout-btn {
+    margin-right: 2rem;
+    font-weight: 100;
     background: none;
     border: none;
     color: #ffffff;
     cursor: pointer;
-    font-size: 0.9rem;
+    font-size: 20px;
     padding: 0.5rem 1rem;
+    align-items: center;
+    font-family: 'Lato', sans-serif; 
+    font-size: 22px; 
+}
+
+.logout-btn:hover {
+    background-color: rgba(99, 92, 195, 0.5); 
+    color: #ffffff; 
+    box-shadow: 0px 0px 15px rgba(99, 92, 195, 0.8);
 }
 
 .content {
@@ -68,8 +97,13 @@
 }
 
 .movies-header h1 {
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-size: 28px; 
+    font-weight: 700;
+    letter-spacing: 2px;
+    font-family: 'Lato', sans-serif; 
+    font-size: 32px; 
+    font-weight: 700;
+    
 }
 
 .header-buttons {
@@ -80,12 +114,12 @@
 .icon-button {
     width: 2rem; 
     height: 2rem; 
-    background: #323056; 
-    border: 1.5px solid rgb(255, 255, 255); 
+    background: #323056;  /*add, change*/
+    border: 1.6px solid rgb(255, 255, 255); 
     border-radius: 4px;
     color: #ffffff;
     cursor: pointer;
-    font-size: 1rem; 
+    font-size: 32px; 
     display: flex;
     justify-content: center; 
     align-items: center; 
@@ -93,17 +127,16 @@
 }
 
 .icon-button:hover {
-    background-color: #635CC3;
-    opacity: 0.5;
+    background-color: rgba(99, 92, 195, 0.3); 
+    color: #ffffff; 
     
 }
 
 .movies-table {
-    background-color: #211D54;
+    background-color: #211D54; /*table*/
     border-radius: 8px;
     overflow: hidden;
-   
-    
+  
 }
 
 table {
@@ -115,22 +148,31 @@ table {
 th, td {
     padding: 0.1rem 4rem;
     text-align: left;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 2.3px solid rgba(99, 92, 195, 0.5); /*border*/
     min-width: 150px;
+    font-family: 'Lato', sans-serif; 
+    font-size: 22px; 
+    font-weight: 700;
 }
 
 th {
     font-weight: 150;
     color: rgb(255, 255, 255);
     padding: 1rem 4rem; 
+    pointer-events: none;
+
 }
 
 td {
     font-size: 0.7rem;
+    font-family: 'Lato', sans-serif; 
+    font-size: 13px; 
+    font-weight: 500;
 }
 
 tr:hover {
-    background-color: rgba(255, 255, 255, 0.02);
+    background-color: rgba(99, 92, 195, 0.3); 
+    color: #ffffff; 
 }
 
 .more-button {
@@ -145,8 +187,8 @@ tr:hover {
 }
 
 .more-button:hover {
-    background-color: #635CC3;
-    opacity: 0.5;
+    background-color: rgba(99, 92, 195, 0.3); 
+    color: #ffffff; 
 }
 
 .loading {
