--- a/src/components/DeleteConfirmationModal.css
+++ b/src/components/DeleteConfirmationModal.css
@@ -18,6 +18,11 @@
     color: rgba(255, 255, 255, 0.9);
 }
 
+.delete-modal-message span {
+    color: #f3ca34;
+    font-weight: 800;
+}
+
 .delete-modal-buttons {
     display: flex;
     justify-content: center;
