--- a/src/components/MovieInfoModal.css
+++ b/src/components/MovieInfoModal.css
@@ -23,6 +23,16 @@
     flex-direction: column;
 }
 
+.movie-title {
+    font-size: 24px;
+    margin: 0 0 1.5rem 0;
+    background: linear-gradient(to right, #FAB33F, #F9EB32); 
+    color: transparent; 
+    -webkit-background-clip: text; 
+    background-clip: text;
+    font-weight: 700;
+}
+
 .close-button {
     position: absolute;
     top: 0.75rem;
@@ -86,13 +96,6 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-}
-
-.movie-title {
-    font-size: 28px;
-    font-weight: 700;
-    margin: 0 0 1.5rem 0;
-    color: white;
 }
 
 .info-group {
