--- a/src/components/UsersInfoModal.module.css
+++ b/src/components/UsersInfoModal.module.css
@@ -25,6 +25,17 @@
     gap: 1.5rem;
 }
 
+.username {
+    font-family: 'Lato', sans-serif; 
+    font-size: 18px; 
+    font-weight: 900;
+    letter-spacing: 4px;
+    background: linear-gradient(to right, #FAB33F, #F9EB32); 
+    color: transparent; 
+    -webkit-background-clip: text; 
+    background-clip: text; 
+}
+
 .userImageContainer {
     width: 135px;
     height: 135px;
@@ -62,13 +73,14 @@
 .infoLabel {
     font-size: 16px;
     color: #fff;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .infoValue {
     font-size: 14px;
     color: rgba(255, 255, 255, 0.8);
 }
+
 
 .closeButton {
     position: absolute;
