--- a/src/components/statistics/Statistics.css
+++ b/src/components/statistics/Statistics.css
@@ -53,12 +53,10 @@
     width: 210px;
 }
 
-
 .filter-btn:hover {
     background-color: rgba(99, 92, 195, 0.8);
     box-shadow: 0px 0px 15px rgba(69, 64, 132, 0.7);
 }
-
 
 .filter-btn {
     display: flex;
@@ -94,11 +92,18 @@
     border-color: rgba(99, 92, 195, 0.5);
 }
 
+.table-heading {
+    font-family: 'Lato', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: #ffffff;
+    margin: 2rem 0 1rem 0;
+}
+
 .statistics-table {
     background-color: #211D54;
     border-radius: 8px;
     overflow: hidden;
-    margin-top: 2rem;
 }
 
 .statistics-table th:nth-child(1), 
@@ -109,7 +114,6 @@
 .statistics-table th:nth-child(2), 
 .statistics-table td:nth-child(2) {
     width: 35%;  
-    
 }
 
 .statistics-table th:nth-child(3), 
