--- a/src/components/rooms/Rooms.css
+++ b/src/components/rooms/Rooms.css
@@ -1,4 +1,3 @@
-
 .rooms-container {
     min-height: 100vh;
     background-color: #040223;
@@ -36,7 +35,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
     width: 290px;
-    height: 355px;
+    height: auto;  /* Remove fixed height */
     flex-shrink: 0;
 }
 
@@ -49,7 +48,6 @@
     font-size: 20px;
     font-weight: 500;
     color: #ffffff;
-    text-transform: uppercase;
     text-transform: none;
     letter-spacing: 1px;
 }
@@ -65,11 +63,13 @@
     color: rgba(255, 255, 255, 0.7);
 }
 
-.seats-container {
+.seats-grid {
     display: flex;
     flex-direction: column;
+    justify-content: center; /* Center seats vertically */
     gap: 0.3rem;
     align-items: center;
+    margin-bottom: 1rem; /* Add margin for spacing below seats */
 }
 
 .seat-row {
@@ -89,19 +89,18 @@
 .seat svg {
     width: 20px;
     height: 20px;
-    transform: rotate(180deg); 
-    color: rgba(0, 0, 0, 0.6); 
+    transform: rotate(180deg);
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .room-info {
-    margin-top: 1.5rem;
+    margin-top: 1rem; /* Adjust spacing */
     font-size: 14px;
     font-weight: 500;
     color: #ffffff;
     text-align: left;
-  }
- 
-  
+}
+
 .seat:hover {
     transform: scale(1.1);
     box-shadow: 0 0 10px rgb(74, 255, 80);
